--- a/ccs/style.css
+++ b/ccs/style.css
@@ -537,6 +537,39 @@ body{
 }
 
 
+.header__wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.header__list{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.header__item{
+    margin-right: 82px;
+}
+
+.header__item:last-child{
+    margin-right: 0;
+}
+
+.header__link{
+    font-size: 18px;
+    line-height: 24px;
+    color:white;
+    text-decoration: none;
+}
+
+
+
+
+
+
+
 
 
 
