--- a/ccs/style.css
+++ b/ccs/style.css
@@ -583,6 +583,23 @@ body{
     height: 100vh;
     background: url(../img/intro-bg.png) no-repeat;
     background-size: cover;
+    padding-top: 253px;
+}
+
+.intro__title{
+    max-width: 619px;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 60px;
+    color: white;
+    margin-bottom: 22px;
+}
+
+.intro__subtitle{
+    max-width: 546px;
+    color: white;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 /* Intro styles end */
