--- a/ccs/style.css
+++ b/ccs/style.css
@@ -582,10 +582,10 @@ body {
 /* Intro styles start */
 
 .intro {
-    height: 100vh;
+    min-height: 100vh;
     background: url(../img/intro-bg.png) no-repeat;
     background-size: cover;
-    padding-top: 253px;
+    padding-top: 263px;
 }
 
 .intro__title {
@@ -613,8 +613,7 @@ body {
 
 .search-form__field {
     width: 297px;
-    background-color: transparent;
-    background: url(../img/circle-icon.svg) no-repeat left top;
+    background: transparent url(../img/circle-icon.svg) no-repeat left 6px;
     background-size: 20px;
     border: 0;
     border-bottom: 2px solid white;
@@ -631,6 +630,26 @@ body {
     font-size: 18px;
     color: white;
 }
+
+.search-form__submit{
+    padding: 15px 39px;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 24px;
+    color: white;
+    background: #1B7DFF;
+    border: 0;
+}
+
+.search-form__submit:hover, .search-form__submit:focus, .search-form__submit:active{
+    background: #0e66da;
+}
+
+
+
+
+
+
 
 
 
