--- a/ccs/style.css
+++ b/ccs/style.css
@@ -631,7 +631,7 @@ body {
     color: white;
 }
 
-.search-form__submit{
+.search-form__submit {
     padding: 15px 39px;
     text-transform: uppercase;
     font-weight: 500;
@@ -641,17 +641,38 @@ body {
     border: 0;
 }
 
-.search-form__submit:hover, .search-form__submit:focus, .search-form__submit:active{
+.search-form__submit:hover,
+.search-form__submit:focus,
+.search-form__submit:active {
     background: #0e66da;
 }
 
-
-
-
-
-
-
-
-
-
 /* Intro styles end */
+
+/* Benefits styles start */
+
+.benefits__wrap {
+    max-width: 1262px;
+    background-color: white;
+    margin: 0 auto;
+    box-shadow: 0px 2px rgba(21, 24, 36, 0.15993);
+    position: relative;
+}
+
+.benefits__title {
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 42px;
+    padding: 93px 100px 88px 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.benefits__cards {
+    height: 30vh;
+
+}
+
+
+/* Benefits styles end */
