--- a/ccs/style.css
+++ b/ccs/style.css
@@ -526,7 +526,7 @@ body {
     color: #000;
 }
 
-img{
+img {
     min-width: 100%;
     height: auto;
 }
@@ -674,7 +674,6 @@ img{
     left: 0;
     transform: translateY(-100%);
     background-color: white;
-
 }
 
 .benefits__cards {
@@ -682,33 +681,54 @@ img{
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 55px;
     padding: 0 100px;
-  
 }
-.benefits__card{
+
+.benefits__card {
     grid-column: span 1;
 }
 
-.benefits__card-pic{
+.benefits__card-pic {
     max-width: 66px;
-    margin-bottom: 66px;
+    margin-bottom: 37px;
 }
 
-.benefits__card-thumb{
+.benefits__card-thumb {
     display: block;
 }
 
-.benefits__card-title{
+.benefits__card-title {
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 26px;
 }
 
-.benefits__card-desk{
+.benefits__card-desk {
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 39px;
 }
+
+.benefits__card-more {
+    display: inline-block;
+    padding-right: 59px;
+    font-size: 16px;
+    line-height: 24px;
+    color: #006DFE;
+    text-decoration: none;
+    background: url(../img/arrow-right-icon.svg) no-repeat 95% center;
+    transition: .2s all;
+
+}
+.benefits__card-more:hover, .benefits__card-more:focus{
+    background: url(../img/arrow-right-icon.svg) no-repeat right center;
+}
+
+
+
+
+
+
 
 
 
