feat: continue section 3

--- a/ccs/style.css
+++ b/ccs/style.css
@@ -541,6 +541,27 @@ img {
     margin: 0 auto;
 }
 
+.section-title{
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 42px;
+    position: relative;
+    padding-bottom: 7px;
+}
+
+.section-title::after{
+    display: block;
+    content: '';
+    width: 253px;
+    height: 3px;
+    background-color: #006DFE;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+
+
 /* Header styles start */
 
 .header {
@@ -713,7 +734,7 @@ img {
     margin-bottom: 26px;
 }
 
-.benefits__card-desk {
+.benefits__card-desc {
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 39px;
