--- a/ccs/style.css
+++ b/ccs/style.css
@@ -792,8 +792,30 @@ img {
     grid-gap: 10px;
 }
 
+.places__card{
+    position: relative;
+}
+
+.places__card::after{
+    display: block;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: rgba(21, 24, 36, 0.15993);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+
 .places__card_size_lg {
     grid-column: span 3;
+}
+
+.places__card-pic{
+    height: 354px;
+    object-fit: cover;
 }
 
 
