--- a/ccs/style.css
+++ b/ccs/style.css
@@ -616,6 +616,7 @@ img {
     background: url(../img/intro-bg.png) no-repeat;
     background-size: cover;
     padding-top: 263px;
+    padding-bottom: 263px;
 }
 
 .intro__title {
@@ -761,6 +762,10 @@ img {
 
 /* Places styles start */
 
+.places{
+    margin-bottom: 131px;
+}
+
 .places__caption {
     display: flex;
     flex-wrap: wrap;
@@ -809,7 +814,7 @@ img {
     z-index: 2;
 }
 
-.places__card:hover .places__card-pic{
+.places__card:hover .places__card-pic {
     transform: scale(1.05);
 }
 
@@ -828,14 +833,26 @@ img {
     grid-column: span 3;
 }
 
+.places__card_size_sm {
+    grid-column: span 2;
+}
+
 .places__card-pic {
     width: 100%;
-    height: 354px;
-    object-fit: cover;
     transition: .15s all;
 }
 
-.places__card-link{
+.places__card-pic_size_lg {
+    height: 354px;
+    object-fit: cover;
+}
+
+.places__card-pic_size_sm {
+    height: 283px;
+    object-fit: cover;
+}
+
+.places__card-link {
     position: absolute;
     top: 0;
     left: 0;
@@ -843,6 +860,7 @@ img {
     height: 100%;
     z-index: 4;
 }
+
 
 
 
