--- a/ccs/style.css
+++ b/ccs/style.css
@@ -911,8 +911,16 @@ img {
 
 /* <!-- Top start --> */
 
+.top{
+    margin-bottom: 86px;
+}
+
+.top__title{
+    margin-bottom: 54px;
+}
+
 
 
         
 
-/* <!-- Top end --> */
+/* <!-- Top styles end --> */
