--- a/ccs/style.css
+++ b/ccs/style.css
@@ -930,19 +930,44 @@ img {
 }
 
 .top__card-stats {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 24px;
-    color: white;
-}
-
-.top__card-stats {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     background: rgba(21, 24, 36, 0.6);
+    padding: 16px 25px;
 }
+
+.top__card-title {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: white; 
+}
+
+.top__card-likes{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: white;
+    padding-right: 20px;
+    background: url(../img/heart.svg) no-repeat right;
+}
+
+.top__card-comments{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: white;
+    padding-right: 23px;
+    background: url(../img/comment.svg) no-repeat left;
+}
+
+
+
 
 
 
