--- a/ccs/style.css
+++ b/ccs/style.css
@@ -927,12 +927,14 @@ img {
 
 .top__card-pic {
     position: relative;
+    margin-bottom: 45px;
 }
 
 .top__card-stats {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: flex-end;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -945,26 +947,48 @@ img {
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
-    color: white; 
+    color: white;
+    margin: 0 auto 0 0;
 }
 
-.top__card-likes{
+.top__card-likes {
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
     color: white;
     padding-right: 20px;
     background: url(../img/heart.svg) no-repeat right;
+    margin-right: 14px;
 }
 
-.top__card-comments{
+.top__card-comments {
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
     color: white;
     padding-right: 23px;
-    background: url(../img/comment.svg) no-repeat left;
+    background: url(../img/comment.svg) no-repeat right;
 }
+
+.top__card-desc{
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 31px;
+}
+
+.top__card-more{
+    padding: 12px 19px;
+    background: #006DFE;
+    text-decoration: none;
+    color: white; 
+    font-size: 16px;
+}
+
+.top__card-more:hover, .top__card-more:focus, .top__card-more:active{
+    background: #0e66da;
+} 
+
+
 
 
 
