--- a/ccs/style.css
+++ b/ccs/style.css
@@ -1014,7 +1014,21 @@ img {
 .videos__wrapper{
     max-width: 1440px;
     margin: 0 auto;
+    position: relative;
 }
+
+.video__item{
+    padding-top: 56.25%;
+}
+.video__element{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 
 /* Videos style end */
 
