--- a/ccs/style.css
+++ b/ccs/style.css
@@ -169,8 +169,8 @@ audio,
 canvas,
 video {
     display: inline-block;
-    *display: inline;
-    *zoom: 1;
+    display: inline;
+    zoom: 1;
     max-width: 100%;
 }
 
@@ -276,7 +276,7 @@ legend {
     padding: 0;
     white-space: normal;
     /* 2 */
-    *margin-left: -7px;
+    margin-left: -7px;
     /* 3 */
 }
 
@@ -297,7 +297,7 @@ textarea {
     /* 2 */
     vertical-align: baseline;
     /* 3 */
-    *vertical-align: middle;
+    vertical-align: middle;
     /* 3 */
 }
 
@@ -342,7 +342,7 @@ input[type="submit"] {
     /* 2 */
     cursor: pointer;
     /* 3 */
-    *overflow: visible;
+    overflow: visible;
     /* 4 */
 }
 
@@ -368,9 +368,9 @@ input[type="radio"] {
     /* 1 */
     padding: 0;
     /* 2 */
-    *height: 13px;
+    height: 13px;
     /* 3 */
-    *width: 13px;
+    width: 13px;
     /* 3 */
 }
 
@@ -828,11 +828,11 @@ img {
     z-index: 3;
 }
 
-.places__card_size_lg {
+.places__card-size-lg {
     grid-column: span 3;
 }
 
-.places__card_size_sm {
+.places__card-size-sm {
     grid-column: span 2;
 }
 
@@ -841,12 +841,12 @@ img {
     transition: .15s all;
 }
 
-.places__card-pic_size_lg {
+.places__card-pic .size-lg {
     height: 354px;
     object-fit: cover;
 }
 
-.places__card-pic_size_sm {
+.places__card-pic .size-sm {
     height: 283px;
     object-fit: cover;
 }
